adds positive feedback on osier

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -14789,16 +14789,24 @@ analysis may surprise you.},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/N8R4XGBR/CA188D06289B34E424D627017007AC19.html:text/html},
 }
 
-@report{putterman_evaluation_nodate,
+@report{bringolf_evaluation_2024,
+	location = {New York, United States},
 	title = {Evaluation of Illinois’ Policy Proposals on Resource Adequacy},
-	author = {Putterman, Jennifer ({GE} Power)},
+	pages = {28},
+	institution = {{GE} Energy Consulting},
+	author = {Bringolf, Mitch and Gogola, Alexis and Tucker, Shannon},
+	date = {2024-01-19},
 	langid = {english},
 	file = {Putterman - Evaluation of Illinois’ Policy Proposals on Resour.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RB3Z5MBE/Putterman - Evaluation of Illinois’ Policy Proposals on Resour.pdf:application/pdf},
 }
 
-@report{carlson_illinois_nodate,
-	title = {Illinois Power Agency Policy Study: Aurora Production cost Modeling},
+@report{carlson_illinois_2024,
+	location = {Boston, {MA}, United states},
+	title = {Illinois Power Agency Policy Study: Aurora Production Cost Modeling},
+	pages = {49},
+	institution = {Levitan \& Associates},
 	author = {Carlson, Richard L},
+	date = {2024-01-19},
 	langid = {english},
 	file = {Carlson - Illinois Power Agency Policy Study Aurora Product.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/L489LKDC/Carlson - Illinois Power Agency Policy Study Aurora Product.pdf:application/pdf},
 }
@@ -20928,7 +20936,7 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	author = {Yin, Robert K.},
 	date = {2018},
 	langid = {english},
-	keywords = {Case method, Research Methodology, Social sciences},
+	keywords = {Social sciences, Case method, Research Methodology},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/WRGJUY36/Yin - 2018 - Case study research and applications design and methods.pdf:application/pdf},
 }
 
@@ -20970,7 +20978,7 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	date = {2024-03},
 	langid = {english},
 	note = {Publisher: Nature Publishing Group},
-	keywords = {Climate-change adaptation, Climate-change mitigation, Climate-change policy},
+	keywords = {Climate-change mitigation, Climate-change policy, Climate-change adaptation},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/CCWTHNK8/Diezmartínez and Short Gianotti - 2024 - Municipal finance shapes urban climate action and justice.pdf:application/pdf},
 }
 
@@ -21020,4 +21028,184 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	date = {2022},
 	langid = {english},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/YMQKY6VU/Citizens%20Guide%20to%20ICC.pdf.pdf:application/pdf},
+}
+
+@article{bell_epistemic_2023,
+	title = {The epistemic tensions of nuclear waste siting in a nuclear landscape},
+	volume = {6},
+	issn = {2514-8486},
+	url = {https://doi.org/10.1177/25148486221117947},
+	doi = {10.1177/25148486221117947},
+	abstract = {Canada's siting process for spent nuclear fuel, led by the Nuclear Waste Management Organization ({NWMO}), is frequently held within nuclear industry spheres as an exemplary siting process, designed to be inclusive, participatory, and “community-driven.” Drawing from ethnographic observations of the process as it unfolded in Southern Ontario, Canada, this paper focuses on the epistemic issues of how diverse knowledges are treated in the process, whose knowledge is valued, how such knowledges are understood, and whose knowledges are excluded. In particular, I make sense of how epistemic tensions in the process are produced by being situated within a nuclear landscape, informed by local nuclear-dominant socio-technical relations and epistemic regimes, which exceptionalize pro-nuclear Western scientific knowledges. This socio-technical constellation, I suggest, leads to careful but sometimes paradoxical negotiations of the expert/lay divide that subsequently reveals cracks in the policy foundation for inclusion of diverse forms of knowledge. While the {NWMO} policy framework discursively values diverse knowledges, critical lay community knowledges are often delegitimized and dismissed. Similarly, there are scalar issues in the ways Indigenous knowledges are homogenized and devalued through discursive separation. These epistemic tensions, between how knowledges should be treated in policy, and how knowledges are actually treated in practice, demonstrate clear issues of recognition justice, participatory fairness, and inclusion of diverse knowledges. The implications of this work shed light on understanding the complexities of landscape-based knowledge politics and how they might inform siting practices and technological decision-making more broadly.},
+	pages = {841--862},
+	number = {2},
+	journaltitle = {Environment and Planning E: Nature and Space},
+	author = {Bell, Marissa},
+	urldate = {2025-07-30},
+	date = {2023-06-01},
+	note = {Publisher: {SAGE} Publications Ltd {STM}},
+}
+
+@online{housel_how_2021,
+	title = {How This All Happened},
+	url = {https://collabfund.com/blog/how-this-all-happened/},
+	abstract = {This is a short story about what happened to the U.S.},
+	titleaddon = {Collaborative Fund},
+	author = {Housel, Morgan},
+	urldate = {2025-07-30},
+	date = {2021-11-24},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5EP5R2SR/how-this-all-happened.html:text/html},
+}
+
+@online{assele_whats_2022,
+	title = {What's in a Crisis},
+	url = {https://www.athwart.org/whats-in-a-crisis-contradictions-capitalism/},
+	abstract = {--------------------------------------------------------------------------------
+
+What comes to mind when you think of an economic crisis? Bad times? Great
+strife? High unemployment? If you guessed any of the above, you’re correct.
+Economic crises usually portend bad times for the majority of us. But the
+offered definitions, while technically correct, don’t get to},
+	titleaddon = {Athwart},
+	author = {Assele, Julian},
+	urldate = {2025-07-30},
+	date = {2022-04-12},
+	langid = {english},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/XDZUKTGE/whats-in-a-crisis-contradictions-capitalism.html:text/html},
+}
+
+@article{di_maio_towards_2014,
+	title = {Towards a Metamodel to Support the Joint Optimization of Socio Technical Systems},
+	volume = {2},
+	rights = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2079-8954},
+	url = {https://www.mdpi.com/2079-8954/2/3/273},
+	doi = {10.3390/systems2030273},
+	abstract = {Designing and implementing functional Socio Technical Systems ({STS}) is becoming increasingly important, as technologies become more pervasive and critical to everyday life. Socio technical systems are said to be efficient and useful when they are “jointly optimized” yet few system designers understand what joint optimization is, and how to achieve it. The paper explains the core tenets of Joint Optimization and identifies the need for artifacts to support the built in design of joint optimization in socio technical systems from the early stages of development. {JOM} (Joint Optimization Metamodel) is proposed, as a cognitive artifact to help conceptualize and model joint optimization, and five types of {JO} are identified resulting from conceptual evaluation of the metamodel.},
+	pages = {273--296},
+	number = {3},
+	journaltitle = {Systems},
+	author = {Di Maio, Paola},
+	urldate = {2025-07-30},
+	date = {2014-09},
+	langid = {english},
+	note = {Number: 3
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {joint optimization, metamodel, socio technical system},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6V7BLG82/Di Maio - 2014 - Towards a Metamodel to Support the Joint Optimization of Socio Technical Systems.pdf:application/pdf},
+}
+
+@article{natarajarathinam_community_2021,
+	title = {Community engagement in engineering education: A systematic literature review},
+	volume = {110},
+	rights = {© 2021 The Authors. Journal of Engineering Education published by Wiley Periodicals {LLC} on behalf of American Society for Engineering Education.},
+	issn = {2168-9830},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/jee.20424},
+	doi = {10.1002/jee.20424},
+	shorttitle = {Community engagement in engineering education},
+	abstract = {Background Community engagement has recently become a focus in engineering education. However, systematic reviews that catalog best practices and identify research patterns and gaps remain scarce. Purpose The purpose of this systematic review is to generate insights and findings by reviewing studies focused on community engagement programs in engineering education from 1980 to 2019. This review offers new findings for practitioners and researchers with a menu of proven ideas and provides directions for community engagement practice and future research. Method Articles were obtained via keyword searches for “Engineering” {AND} “service-learning,” “community engagement” {OR} “civic engagement” using available databases. Search constraints included the year of publication, peer-reviewed articles, and articles written in English. The content analysis method was used to categorize, summarize, and evaluate selected articles. A total of 120 articles have been reviewed. Results This systematic review identified recent trends in engineering community engagement programs. Undergraduate students were the main program participants. The vast majority of projects took place in the United States. Overall, community engagement projects increasingly recruited multidisciplinary students. Factors such as logistics constraints, cultural barriers, and disconnect issues were reported as major challenges to the success of engineering community engagement programs. Qualitative research dominated community engagement studies. The community partner remains a less-studied subject. Research focusing on engineering graduate students in community engagement was rare. Conclusions To obtain a holistic understanding of community engagement in engineering education, additional research should focus on community partners' perspectives, graduate students in engineering, diversity, and holistic assessments.},
+	pages = {1049--1077},
+	number = {4},
+	journaltitle = {Journal of Engineering Education},
+	author = {Natarajarathinam, Malini and Qiu, Shaoping and Lu, Wei},
+	urldate = {2025-07-30},
+	date = {2021},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/jee.20424},
+	keywords = {systematic review, civic engagement, community engagement, gender and ethnicity issues, service-learning},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/57ZKLRVW/Natarajarathinam et al. - 2021 - Community engagement in engineering education A systematic literature review.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5H3BTFZC/jee.html:text/html},
+}
+
+@article{turin_conceptualising_2023,
+	title = {Conceptualising community engagement as an infinite game implemented through finite games of ‘research’, ‘community organising’ and ‘knowledge mobilisation’},
+	volume = {26},
+	rights = {© 2023 The Authors. Health Expectations published by John Wiley \& Sons Ltd.},
+	issn = {1369-7625},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/hex.13801},
+	doi = {10.1111/hex.13801},
+	abstract = {Meaningful community engagement process involves focusing on the community needs, building community capacity and employing culturally tailored and community-specific strategies. In the current practices of community-engaged health and wellness research, generally, community engagement activities commence with the beginning of a particular research project on a specific topic and end with the completion of the project. The outcomes of the community engagement, including the trust, partnership and contribution of the community to research, thus remain limited to that specific project and are not generally transferred and fostered further to the following project on a different topic. In this viewpoint article, we discussed a philosophical approach to community engagement that proposes to juxtapose community engagement for the specific short-term research project and the overarching long-term programme of research with the finite game and infinite game concepts, respectively. A finite game is a concept of a game where the players are known, rules are fixed and when the agreed-upon goal is achieved, the game ends. On the other hand, in infinite games, the players may be both known and unknown, have no externally fixed rules and have the objective of continuing the game beyond a particular research project. We believe community engagement needs to be conducted as an infinite game that is, at the programme of research level, where the goal of the respective activities is not to complete a research project but to successfully engage the community itself is the goal. While conducting various research projects, that is, finite games, the researchers need to keep an infinite game mindset throughout, which includes working with the community for a just cause, building trust and community capacity to maximise their contribution to research, prioritising community needs and having the courage to lead the community if need be. Patient or Public Contribution: While preparing this manuscript, we have partnered actively with community champions, activists, community scholars and citizen researchers at the community level from the very beginning. We had regular interactions with them to get their valuable and insightful inputs in shaping our reflections. Their involvement as coauthors in this paper also provided a learning opportunity for them and facilitated them to gain insight on knowledge engagement. All authors support greater community/citizen/public involvement in research in an equitable manner.},
+	pages = {1799--1805},
+	number = {5},
+	journaltitle = {Health Expectations},
+	author = {Turin, Tanvir C. and Kazi, Mashrur and Rumana, Nahid and Lasker, Mohammad A. A. and Chowdhury, Nashit},
+	urldate = {2025-07-30},
+	date = {2023},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/hex.13801},
+	keywords = {civic engagement, community engagement, public involvement},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/IP73IRUJ/Turin et al. - 2023 - Conceptualising community engagement as an infinite game implemented through finite games of ‘resear.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/BN3IVYBT/hex.html:text/html},
+}
+
+@article{pautasso_ten_2013,
+	title = {Ten Simple Rules for Writing a Literature Review},
+	volume = {9},
+	issn = {1553-734X},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3715443/},
+	doi = {10.1371/journal.pcbi.1003149},
+	pages = {e1003149},
+	number = {7},
+	journaltitle = {{PLoS} Computational Biology},
+	shortjournal = {{PLoS} Comput Biol},
+	author = {Pautasso, Marco},
+	urldate = {2025-07-30},
+	date = {2013-07-18},
+	pmid = {23874189},
+	pmcid = {PMC3715443},
+	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/X5E7QWBI/Pautasso - 2013 - Ten Simple Rules for Writing a Literature Review.pdf:application/pdf},
+}
+
+@article{fox_distinguishing_2011,
+	title = {Distinguishing Two Dimensions of Uncertainty},
+	issn = {1556-5068},
+	url = {https://www.ssrn.com/abstract=3695311},
+	doi = {10.2139/ssrn.3695311},
+	journaltitle = {{SSRN} Electronic Journal},
+	shortjournal = {{SSRN} Journal},
+	author = {Fox, Craig R. and Ulkumen, Gulden},
+	urldate = {2025-07-30},
+	date = {2011},
+	langid = {english},
+	note = {Publisher: Elsevier {BV}},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5URAL4BF/Fox and Ulkumen - 2011 - Distinguishing Two Dimensions of Uncertainty.pdf:application/pdf},
+}
+
+@article{zegart_gassing_2021,
+	title = {Gassing Satartia: How A {CO}2 Pipeline Explosion Affected This Mississippi Town},
+	volume = {online},
+	url = {https://www.huffpost.com/entry/gassing-satartia-mississippi-co2-pipeline_n_60ddea9fe4b0ddef8b0ddc8f},
+	shorttitle = {Gassing Satartia},
+	abstract = {A {CO}2 pipeline in Mississippi ruptured last year, sickening dozens of people. What does it forecast for the massive proposed buildout of pipelines across the U.S.?},
+	journaltitle = {{HuffPost}},
+	author = {Zegart, Dan},
+	urldate = {2025-07-30},
+	date = {2021-08-26},
+	langid = {english},
+	note = {Section: Environment},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/HTAE9Z7U/gassing-satartia-mississippi-co2-pipeline_n_60ddea9fe4b0ddef8b0ddc8f.html:text/html},
+}
+
+@report{illinois_power_agency_ipa_2024_2024,
+	location = {Illinois},
+	title = {2024 Policy Study: Draft for Public Comment},
+	url = {https://ipa.illinois.gov/content/dam/soi/en/web/ipa/documents/ipa-2024%20-draft-policy-study-22-jan-2024.pdf},
+	pages = {242},
+	institution = {Illinois Power Agency},
+	author = {{Illinois Power Agency (IPA)}},
+	urldate = {2025-08-06},
+	date = {2024-01-22},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/KBMVSK5F/ipa-2024%20-draft-policy-study-22-jan-2024.pdf.pdf:application/pdf},
+}
+
+@report{bhandari_exelon_2021,
+	location = {Cambridge, {MA}, United States},
+	title = {Exelon Illinois Nuclear Fleet Audit},
+	url = {https://www.synapse-energy.com/sites/default/files/Exelon_Illinois_Nuclear_Fleet_Audit_Report_REDACTED_21-002.pdf},
+	pages = {80},
+	institution = {Synapse Energy Economics Incorporated},
+	author = {Bhandari, Divita and Chang, Max and Eash-Gates, Philip and Frost, Jason and Letendre, Steve and Litynski, Jackie and Roberto, Cheryl and Takasugi, Andrew and Tabernero, Jon and Wilson, Rachel},
+	urldate = {2025-08-06},
+	date = {2021-04-14},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6PP762DM/Exelon_Illinois_Nuclear_Fleet_Audit_Report_REDACTED_21-002.pdf:application/pdf},
 }
