--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -94,7 +94,8 @@ This study found 6 principles of planning for energy justice.
     and that there are no universal solutions.
     \item Addressing the root cause and legacies of inequality
     \item Shifting the balance of power from existing forms of energy governance
-    \item Creating new, cooperative, and participatory systems of energy governance and ownership
+    \item Creating new, cooperative, and participatory systems of energy
+    governance and ownership
     \item Adopting a rights-based approach
     \item Rejecting false solutions
 \end{enumerate}
@@ -135,14 +136,15 @@ enabling replication and comparison \cite{johannsen_designing_2021,
 yin_case_2018}. Further, since one purpose of this study is to evaluate the
 design and applicability of the tool, \ac{osier}, a multiple-case study design
 will strengthen software changes and feature additions and support \ac{osier}'s
-use in other locations and contexts. The raw data include interview transcriptions
-and the relevant municipal climate and energy plans, if available. The
-interviews were transcribed with the ``listen and revise method'' using the
-Whisper transcription tool \cite{battaglia_listen_2024}. Whisper uses \ac{ai} to
-automate the transcription process. Both the data and the \ac{ai} model used to
-transcribe the interview audio were hosted locally (i.e., without an internet
-connection), eliminating privacy concerns \cite{battaglia_listen_2024}. Figure
-\ref{fig:whisper} shows a screenshot of the Whisper interface. 
+use in other locations and contexts. The raw data include interview
+transcriptions and the relevant municipal climate and energy plans, if
+available. The interviews were transcribed with the ``listen and revise method''
+using the Whisper transcription tool \cite{battaglia_listen_2024}. Whisper uses
+\ac{ai} to automate the transcription process. Both the data and the \ac{ai}
+model used to transcribe the interview audio were hosted locally (i.e., without
+an internet connection), eliminating privacy concerns
+\cite{battaglia_listen_2024}. Figure \ref{fig:whisper} shows a screenshot of the
+Whisper interface. 
 
 \begin{figure}[htbp!]
     \centering
@@ -153,7 +155,8 @@ connection), eliminating privacy concerns \cite{battaglia_listen_2024}. Figure
     \label{fig:whisper}
 \end{figure}
 
-The transcribed interviews were initially coded using a deductive approach aligned with three aims of this study:
+The transcribed interviews were initially coded using a deductive approach
+aligned with three aims of this study:
 \begin{enumerate}
     \item identify how (if) energy models are used to support energy planning at
     local and state levels,
@@ -161,12 +164,12 @@ The transcribed interviews were initially coded using a deductive approach align
     planning decisions
     \item assess the usefulness of a new modeling tool, \ac{osier}.
 \end{enumerate} 
-However, I combined this with an inductive process to develop additional codes. The benefits
-of this hybrid strategy are that it allows comparing and contrasting the results of the present study with existing
-literature while producing insights novel to this study.
-The interview coding step was also performed locally with the \texttt{Taguette}
-tool \cite{rampin_taguette_2021}. Figure \ref{fig:taguette} shows a screenshot
-of the \texttt{Taguette} software.
+However, I combined this with an inductive process to develop additional codes.
+The benefits of this hybrid strategy are that it allows comparing and
+contrasting the results of the present study with existing literature while
+producing insights novel to this study. The interview coding step was also
+performed locally with the \texttt{Taguette} tool \cite{rampin_taguette_2021}.
+Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette} software.
 
 \begin{figure}[htbp!]
     \centering
@@ -197,11 +200,10 @@ to five main topics (for details, see Appendix \ref{chapter:interview-guide}).
 The interviewees were chosen through a combination of purposive and snowball
 sampling to identify staff with sufficient and relevant energy planning
 experience. Each interviewee is involved in decision making, planning, or
-advocacy in their respective context. 
-Table \ref{tab:interviewees} summarizes the interviewees for this study. The
-\textit{organization} column refers to the organization that either employs, or is
-represented by, the interviewee. The \textit{type} column assigns the
-interviewee a broad category including
+advocacy in their respective context. Table \ref{tab:interviewees} summarizes
+the interviewees for this study. The \textit{organization} column refers to the
+organization that either employs, or is represented by, the interviewee. The
+\textit{type} column assigns the interviewee a broad category including
 \begin{enumerate}
     \item practicioner --- someone involved in the process of energy planning
     and/or carries out policy directives from policy makers,
@@ -220,7 +222,7 @@ interviewee a broad category including
         Number & Participant Code & Organization & Type \\
         \midrule
         1& UP1 &Urbana& Practitioner\\ % 
-        2& UP2 &\ac{uiuc}/Urbana& Practitioner\\ % 
+        2& UP2 &Urbana/\ac{uiuc}& Practitioner\\ % 
         3& UM1 &Urbana & Policy maker\\ % 
         4& UI1 & \ac{uiuc} & Practitioner\\ % 
         5& CP1 & Champaign & Practitioner\\ % 
@@ -436,12 +438,12 @@ that
 \section{Energy Procurement in Illinois}
 
 This section describes the ways consumers and municipalities procure electricity
-in Illinois. This brief interlude provides essential context for understanding the structural barriers
-preventing municipalities from taking advantage of energy modeling tools to aid
-planning and elucidates the frequently limited scope of municipal energy plans.
-Figure \ref{fig:illinois-flow-chart} provides a visual guide for electricity
-procurement from the perspective of an individual consumer with arrows
-indicating directional relationships.
+in Illinois. This brief interlude provides essential context for understanding
+the structural barriers preventing municipalities from taking advantage of
+energy modeling tools to aid planning and elucidates the frequently limited
+scope of municipal energy plans. Figure \ref{fig:illinois-flow-chart} provides a
+visual guide for electricity procurement from the perspective of an individual
+consumer with arrows indicating directional relationships.
 
 First, Illinois belongs to two \acp{rto}, \ac{pjm} and \ac{miso}, which conduct
 wholesale energy auctions through which market participants purchase
@@ -495,8 +497,9 @@ that currently outsource their electricity procurement to \ac{imea} are
 contractually prohibited from building certain \ac{btm} resources.
 
 \section{Results}
-This section explores the results from the analysis of thirteen interviews. It is organized
-according to \textcolor{red}{X} number of themes derived from thematic analysis.
+This section explores the results from the analysis of thirteen interviews. It
+is organized according to \textcolor{red}{X} number of themes derived from
+thematic analysis.
 
 \begin{table}[ht!]
     \centering
@@ -511,19 +514,26 @@ according to \textcolor{red}{X} number of themes derived from thematic analysis.
 
 None of the municipalities considered in this study, Naperville, Champaign,
 Urbana, nor \ac{uiuc}, use \acp{esom} to guide energy planning and investment
-decisions. At the state level, the \ac{ipa} use modeling \textit{results} to inform
-policy recommendations but the modeling itself was outsourced to an external consultant.
+decisions. At the state level, the \ac{ipa} use modeling \textit{results} to
+inform policy recommendations but the modeling itself was outsourced to an
+external consultant. However, \ac{ipa} studies typically employ \acp{esom} such
+as Aurora or GE's MARS model\footnote{Both Aurora and GE MARS were excluded from
+the review in Section \ref{section:esoms} because they are proprietary models
+and prohibitively expensive for non-enterprise users.}
+\cite{bringolf_evaluation_2024, carlson_illinois_2024}.
 
-Practitioners also understood modeling differently from the definition of \acp{esom}.
-Two interviewees, UI1 and CP1, indicated that ``energy models'' were used but described
-\acp{bem}, which are distinct from \acp{esom} because they focus on the flow of \textit{heat}
-energy into and and throughout a building. \acp{bem} are useful for identifying efficiency measures
-but are not mathematical optimization tools.
+Practitioners also understood modeling differently from the definition of
+\acp{esom}. Two interviewees, UI1 and CP1, indicated that ``energy models'' were
+used but described \acp{bem}, which are distinct from \acp{esom} because they
+focus on the flow of \textit{heat} energy into and and throughout a building.
+\acp{bem} are useful for identifying efficiency measures but are not
+mathematical optimization tools.
 
 
 \subsection{Considerations of justice in energy planning}
-\textcolor{red}{I think this section should be broken into three or four sub-sections, one
-for each aspect of justice and how it is considered in planning processes...}
+\textcolor{red}{I think this section should be broken into three or four
+sub-sections, one for each aspect of justice and how it is considered in
+planning processes...}
 
 At both the state and municipal levels, energy justice considerations are driven
 primarily by advocacy groups, such as \ac{cub} and \ac{nest}, lobbying for its
@@ -563,7 +573,76 @@ Other items to discuss
 
 \subsection{Structural barriers to energy modeling}
 
-\subsection{\ac{osier}'s planning potential}
+\begin{enumerate}
+    \item Lack of access to energy use data from municipal constituents
+    (Champaign/Urbana)
+    \item Engaged in contracts that delay or prohibit investment in certain
+    \ac{btm} resources.
+    \item Inadequate grid infrastructure to support \ac{btm} resources.
+    \item \dots
+\end{enumerate}
+
+\subsection{Assessing \ac{osier}} The final section in each interview involved
+an introduction to \ac{osier} through a short presentation and demonstration of
+the tool, followed by a discussion and solicitation of feedback from the
+interviewees. 
+
+The majority of the interviewees expressed strong positive impressions of the
+tool along three major axes. First, they appreciated that \ac{osier} is capable
+of modeling objectives besides cost because policy makers and their constituents
+have priorities that are not or cannot be neatly captured by a cost metric. In
+the words of interviewee IP3
+\begin{quote}
+    [L]east costs only make sense if you assume that markets are properly
+    internalizing and socializing all costs. And that's impossible to have
+    happen because certain things are more acutely felt by some than others. And
+    certain costs don't want themselves being internalized into a market. So
+    you're just never going to get a properly balanced kind of snapshot of
+    efficient outcomes if you're focused only on cost in a narrow sense. And I
+    think there's a broader recognition [\dots] that we need to balance other
+    public policy objectives [\dots] and so you need a tool like this in order
+    to properly balance other public policy objectives. Otherwise, you have
+    outcomes that are tilted too firmly in favor of those things where the costs
+    are socialized or are not quantified. So I see the utility --- that seems
+    very evident to me.
+\end{quote}
+Further, interviewees identified the benefits of illustrating tradeoffs among
+policy options or energy visions.
+\begin{quote}
+    I mean this is exactly what we need, an energy model that shows us like
+    something other than cost but I think too people are starting to ask
+    questions about [\dots] \acp{smr} and you know crossing that with land use
+    with other things that people are like `I think nuclear is good but what are
+    the tradeoffs for nuclear?' [T]o have something you can input those
+    objectives into and show you, I think that that is going to be infinitely
+    useful. (Interviewee IA2)
+\end{quote}
+
+Second, interviewees found that \ac{osier} could be useful for communicating
+with both decision makers and constituents. As well as generating buy-in with
+other staff members at an organization.
+\begin{quote}
+    [W]hat I see is that this tool could give us the ability to communicate with
+    those decision makers who are not in the trenches about the details, maybe
+    don't even know what renewable energy certificates are, or renewable
+    identification numbers for renewable natural gas, or they're afraid of
+    nuclear because they don't understand it at all. And those folks I think
+    this would be a useful tool for communicating with them and getting buy-in
+    but I also think it could be useful just within the utilities team as
+    they're identifying you know what do they want to advocate for and why.
+    (Interviewee UI1)
+\end{quote}
+
+Finally, interviewees suggested that \ac{osier} could be used to enhance
+participation by members of the public and also, because \ac{osier} is open
+source and open data, encourage engagement from municipalities that otherwise do
+not have the resources to do energy modeling. Two interviewees (UP1, UP2)
+caveated this insight with the need for ``technical translation'' or
+``simplified charts'' but agreed that \ac{osier} could enhance dialogue and
+participation. ``If it's open source then everybody can have access to it.
+Everybody can be involved in the process and communities that don't have the
+resources to buy software can do this themselves in a sense or be involved in
+the process'' (interviewee UP2). 
 
 % This chapter addresses my proposal to ``validate'' \ac{osier} by conducting a
 % case study of energy planning processes in Champaign-Urbana through interviews
@@ -617,8 +696,8 @@ Benefits include
     solutions \cite{elmallah_frontlining_2022}. However, place-based solutions
     require authentic engagement and ``quantitative metrics cannot replace on
     the ground work that includes qualitative, community-based approaches in
-    devising policy solutions'' \cite{elmallah_frontlining_2022}. While \ac{osier}
-    can stand alone as an \ac{esom}, it is likely most effective as part of an 
-    iterative, participatory, approach as outlined by McGookin et al. 2024 
-    \cite{mcgookin_advancing_2024}.
+    devising policy solutions'' \cite{elmallah_frontlining_2022}. While
+    \ac{osier} can stand alone as an \ac{esom}, it is likely most effective as
+    part of an iterative, participatory, approach as outlined by McGookin et al.
+    2024 \cite{mcgookin_advancing_2024}.
 \end{enumerate}
