--- a/docs/tables/thematic-analysis.tex
+++ b/docs/tables/thematic-analysis.tex
@@ -20,9 +20,9 @@
     Justice programs&\\
     \midrule
     Energy Market&\multirow{2}{*}{Structural barriers to modeling}\\
-    \acl{mca}&\\
+    \Acl{mca}&\\
     \midrule
-    Positive feedback&\multirow{3}{*}{\ac{osier}}\\
+    Positive feedback&\multirow{3}{*}{Assessing \ac{osier}}\\
     Feature request or change&\\
     Usage barriers&\\
     \bottomrule
