finishes the osier assessment section

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -582,10 +582,11 @@ Other items to discuss
     \item \dots
 \end{enumerate}
 
-\subsection{Assessing \ac{osier}} The final section in each interview involved
-an introduction to \ac{osier} through a short presentation and demonstration of
-the tool, followed by a discussion and solicitation of feedback from the
-interviewees. 
+\subsection{Assessing \ac{osier}} 
+
+The final section in each interview involved an introduction to \ac{osier}
+through a short presentation and demonstration of the tool, followed by a
+discussion and solicitation of feedback from the interviewees. 
 
 The majority of the interviewees expressed strong positive impressions of the
 tool along three major axes. First, they appreciated that \ac{osier} is capable
@@ -643,6 +644,32 @@ participation. ``If it's open source then everybody can have access to it.
 Everybody can be involved in the process and communities that don't have the
 resources to buy software can do this themselves in a sense or be involved in
 the process'' (interviewee UP2). 
+
+Although not unique to \ac{osier}, the interviewees universally identified the
+challenge of finding reliable input data to use in a model. \ac{osier}'s
+programming interface received mixed feedback. Several interviewees did not have
+experience with progamming and determined that the lack of a \ac{gui} would be a
+barrier to \ac{osier}'s adoption for in-house modeling work. 
+\begin{quote}
+    I'd never heard of Python before. For me, it would require an education or
+    maybe a little bit more ability to tweak using known methods. So like slider
+    to move one up and one down, like percentage importance of cost versus
+    clean. Yeah, kind of like, I think, like Power BI can be used sometimes in
+    ways where the user can interact with the charts and move stuff around a
+    little bit. Yeah, I would need help (Interviewee NP1).
+\end{quote}
+However, one interviewee with some exposure to Python appreciated the examples
+available with \ac{osier}'s documentation. ``This is what I was looking for, a
+low cost entrance into the tool. This is the standard way where you've got
+discussion and then in between lines of code. I love it'' (Interviewee NA2).
+
+Finally, interviewees identified some features that would be valuable for an
+\ac{esom} tool, such as \ac{osier}, to support. Representing energy efficiency
+measures, such as improvements to building heating envelopes or switching to LED
+lights, was the most frequently mentioned feature. Electric vehicle charging and
+distributed energy resources were the second most requested feature.
+Interviewees also expressed interest  policy levers such as time of use rates
+for electricity or net energy metering.
 
 % This chapter addresses my proposal to ``validate'' \ac{osier} by conducting a
 % case study of energy planning processes in Champaign-Urbana through interviews
