--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -109,5 +109,6 @@
 \acro{mes}[MES]{Minimum Equity Standard}
 \acro{rec}[REC]{renewable energy credit}
 \acro{bem}[BEM]{building energy model}
+\acro{gui}[GUI]{graphical user interface}
 
 
